--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        com.deviniti.jirainstaller2.Main
+                                        com.thobho.jirainstaller.Main
                                     </mainClass>
                                 </manifest>
                             </archive>
